webpack fixed, login popup rearranged

--- a/client/scss/variables.scss
+++ b/client/scss/variables.scss
@@ -2,10 +2,10 @@ $white-color: #ffffff;
 $black-color: #000000;
 $font-color: #30140c;
 $font-logo: 30px;
-$font-large: 19px;
-$font-medium: 15px;
-$font-small: 14px;
-$font-micro: 12px;
+$font-large: 1.2rem;
+$font-medium: 1rem;
+$font-small: 0.875rem;
+$font-micro: 0.75rem;
 
 // Color Pallete
 $Primary: #efab9a;
