--- a/client/scss/header.scss
+++ b/client/scss/header.scss
@@ -38,6 +38,7 @@
   border-right: 2px solid $Primary;
   border-bottom-left-radius: 0.25rem;
   position: absolute;
+  right: 0;
   height: 200px;
   width: 250px;
   margin-top: 45px;
@@ -67,6 +68,13 @@
 .credContainer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.input__field {
+  width: 70%;
+  margin-top: 1%;
+  line-height: 1.5rem;
 }
 
 .authors {
@@ -85,15 +93,74 @@
 .logInButtonContainer {
   display: flex;
   flex-direction: column;
-  margin-left: 30px;
-  margin-bottom: 10px;
+  margin-left: 3.5rem;
+  justify-content: center;
   // align-items: center;
   // height: 50px;
+  .signUpButton {
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 4rem;
+    padding: 0.6rem 1.8rem 0.6rem 3rem;
+    font-size: $font-large;
+    cursor: pointer;
+
+    border-radius: 7px;
+    border-bottom-left-radius: 0;
+
+    background-color: $Primary;
+    color: $Accent2;
+
+    transition: all 0.3s;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    &:hover {
+      border-radius: 0px;
+
+      color: $font-color;
+      background-color: $Accent2;
+      background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffacac' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+      animation: animatedBackground 5s linear infinite alternate;
+    }
+  }
+
+  .logInButton {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin-left: 4rem;
+    padding: 0.6rem 1.8rem 0.6rem 3.3rem;
+    font-size: $font-large;
+    cursor: pointer;
+
+    border-radius: 7px;
+    border-bottom-left-radius: 0;
+
+    background-color: $Primary;
+    color: $Accent2;
+
+    transition: all 0.3s;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    &:hover {
+      border-radius: 0px;
+
+      color: $font-color;
+      background-color: $Accent2;
+      background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffacac' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+      animation: animatedBackground 5s linear infinite alternate;
+    }
+  }
 }
 
 .submit {
-  @extend .logInButtonContainer;
-  padding: 10px 30px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 4rem;
+  padding: 0.6rem 1.8rem;
   font-size: $font-large;
   cursor: pointer;
 
@@ -104,7 +171,8 @@
   color: $Accent2;
 
   transition: all 0.3s;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
+  margin-left: 1rem;
   &:hover {
     border-radius: 0px;
 
