--- a/client/scss/header.scss
+++ b/client/scss/header.scss
@@ -191,3 +191,36 @@
     background-position: 100% 0;
   }
 }
+
+.wrong-input {
+  animation: blinker 0.2s linear infinite;
+}
+
+@-webkit-keyframes blinker {
+  0%, 49%{
+    background-color: red;
+    margin-left: 1rem;
+  }
+  50%,100%{
+    background-color: rgb(255, 255, 255);
+    margin-left: 0;
+  }
+}
+@keyframes blinker {
+  0%, 25%{
+    background-color: red;
+    margin-left: 0.4rem;
+  }
+  26%, 49%{
+    background-color: red;
+    margin-left: 0rem;
+  }
+  50%, 74%{
+    background-color: rgb(255, 255, 255);
+    margin-right: 0.4rem;
+  }
+  75%,100%{
+    background-color: rgb(255, 255, 255);
+    margin-right: 0;
+  }
+}
