mess up the color themes

--- a/client/scss/variables.scss
+++ b/client/scss/variables.scss
@@ -1,6 +1,6 @@
 $white-color: #ffffff;
 $black-color: #000000;
-$font-color: #30140c;
+$font-color: #4d101f;
 $font-logo: 30px;
 $font-large: 1.2rem;
 $font-medium: 1rem;
@@ -8,8 +8,8 @@ $font-small: 0.875rem;
 $font-micro: 0.75rem;
 
 // Color Pallete
-$Primary: #efab9a;
-$Secondary: #d5e4ff;
-$Accent1: #e7a8d7;
-$Accent2: #a4db9d;
+$Primary: #7494ff;
+$Secondary: #ffe6e6;
+$Accent1: #9CF6F6;
+$Accent2: #3eb9b9;
 $Black1: #242424;
