--- a/client/scss/googleMap.scss
+++ b/client/scss/googleMap.scss
@@ -1,33 +1,36 @@
 .google_map_area {
   position: absolute;
-  top: 120px;
+  top: 110px;
   left: 280px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: lighten($Primary, 20%);
+  // background-color: lighten($Primary, 20%);
   width: 900px;
   height: 650px;
 }
 .map_wrapper{
   display: flex;
+  width: 45rem;
+  height: 40rem;
 }
 #map {
-  width: 55vw;
-  height: 55vh;
+  width: 60vw;
+  height: 58vh;
   background-color: blue;
 }
 
 .map-side-info {
-  width: 20em;
-  height: 20em;
+  width: 50rem;
+  height: 25rem;
   margin-left: 20px;
-  border: 3px solid #416dff;;
+  border: 3px solid #416dff;
+  border-radius: 7%;;
 }
 
 .map-side-img {
-  width: 15em;
-  height: 15em;
+  width: 15rem;
+  height: 15rem;
 }
 
 .gMapInner svg {
